@@ -10,7 +10,7 @@
 
     <properties>
         <selenium.version>3.141.59</selenium.version>
-        <logback.version>1.5.8</logback.version>
+        <logback.version>1.5.13</logback.version>
         <wdm.version>5.9.2</wdm.version>
         <slf4j.version>2.0.16</slf4j.version>
         <restassured.version>5.4.0</restassured.version>
@@ -21,8 +21,8 @@
         <browser>chrome</browser>
         <headless>true</headless>
         <driverType>local</driverType>
-        <surefire.version>3.5.0</surefire.version>
-        <java.version>1.8</java.version>
+        <surefire.version>3.5.2</surefire.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -74,12 +74,12 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
+            <version>1.18.36</version>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>gherkin</artifactId>
-            <version>29.0.0</version>
+            <version>30.0.4</version>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
@@ -145,7 +145,6 @@
                                 <headless>${headless}</headless>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -176,7 +175,6 @@
                                 <headless>${headless}</headless>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -199,7 +197,6 @@
                                 <env>${env.dev}</env>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>./src/test/resources/testng_api_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -222,7 +219,6 @@
                                 <env>${env.qa}</env>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>./src/test/resources/testng_api_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -258,7 +254,6 @@
                                 <headless>${headless}</headless>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -294,7 +289,6 @@
                                 <headless>${headless}</headless>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>./src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
